fix for vertical spacing on comments modal

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -76,6 +76,10 @@ body {
             display: inherit;
         }
 
+        hr {
+            margin-bottom: .5rem;
+        }
+
         // Dropdown
         .dropdown {
 
